	of AC_CONFTEST
	(PC_PYTHON_CHECK_PLATFORM): Change to use AC_LINK_IFELSE instead
	of AC_CONFTEST
	(PC_PYTHON_CHECK_SITE_DIR): Change to use AC_LINK_IFELSE instead
	of AC_CONFTEST
	(PC_PYTHON_CHECK_EXEC_DIR): Change to use AC_LINK_IFELSE instead
	of AC_CONFTEST

	* pyconf.in: Handle different exceptions being thrown by os.mkdir
	in Python 2 vs Python 3

2013-06-16  Brandon Invergo  <brandon@invergo.net>

	* src/Makefile.in.make (DISTFILES): Add more files to the default
	distfile list
	(install-dirs): Fix messed-up directory expansion to use a Make
	function instead
	(install-dirs): Replace erroneous references to an "installdirs"
	target

2013-04-21  Brandon Invergo  <brandon@invergo.net>

	* src/Makefile.in.make (byte-compile): Add target to byte-compile
	Python libraries
	(build): Add general build target

	* pyconf.in: Add --overwrite option to protect from clobbering
	existing files.

2013-04-16  Brandon Invergo  <brandon@invergo.net>

	* src/configure.ac: Update to include PC_INIT

	* src/m4/python.m4 (PC_INIT): Allow full version strings to be
	used for the min/max versions

2013-04-15  Brandon Invergo  <brandon@invergo.net>

	* src/m4/python.m4 (PC_INIT): Make PC_INIT much more flexible and
	robust.

2013-04-10  Brandon Invergo  <brandon@invergo.net>

	* src/m4/python.m4 (PC_INIT): Add initial version of the PC_INIT
	macro

2013-04-08  Brandon Invergo  <brandon@invergo.net>

	* src/m4/python.m4 (PC_PYTHON_VERIFY_VERSIN): Support any
	comparison operator (i.e. "<", ">", "==", etc.)

2013-03-17  Brandon Invergo  <brandon@invergo.net>

	* src/Makefile.in.distutils (dist): Un-silence the dist procedure

	* pyconf.in (gen_configure): Set executable bits for bootstrap.sh
	and install-sh after copying to the user's directory.

	* COPYING: Add info on pyconf.in license.

	* COPYING.GPLv3: Add file. pyconf.in is under GPLv3+.

	* pyconf.in: Change pyconf.py to be configured by Automake/Make
	(print_version): Add function and command-line options to view