@@ -67,6 +67,11 @@ def parse_pkg_info(pkg_info):
     with open(pkg_info) as h:
         lines = h.readlines()
     for line in lines:
+        if line[0:8] == "       |":
+            if key is None or key == "":
+                sys.exit("*** Error: Folded field that doesn't belong to any key")
+            pkg_meta[key] = '\r\n'.join([pkg_meta[key], line[8:]])
+            continue
         key, sep, val = line.partition(':')
         val = val.strip()
         if key == "Metadata-Version" and float(val) < 1.2:
