@@ -36,7 +36,7 @@ setup(name='@PACKAGE_NAME@',
       maintainer='{Maintainer}',
       maintainer_email='{Maintainer-email}',
       url='{URL}',
-      description='{Description}',
+      description="""{Description}""",
       long_description=long_desc,
       download_url='{Download-URL}',
       classifiers=['{Classifier-list}'],
